--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
     </properties>
 
     <dependencies>
-        <!-- JavaFX dependencies for Java 8+ -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
@@ -40,68 +39,21 @@
             <artifactId>javafx-fxml</artifactId>
             <version>17.0.2</version>
         </dependency>
-        <!-- OkHttp3 - HTTP客户端 -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>${okhttp.version}</version>
         </dependency>
-<!--        -->
-<!--        &lt;!&ndash; OkHttp3 Logging Interceptor &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.squareup.okhttp3</groupId>-->
-<!--            <artifactId>logging-interceptor</artifactId>-->
-<!--            <version>${okhttp.version}</version>-->
-<!--        </dependency>-->
-
-        <!-- org.json - JSON处理 -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
-
-        <!-- SLF4J + Logback - 日志框架 -->
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-api</artifactId>-->
-<!--            <version>${slf4j.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>ch.qos.logback</groupId>-->
-<!--            <artifactId>logback-classic</artifactId>-->
-<!--            <version>${logback.version}</version>-->
-<!--        </dependency>-->
-
-<!--        &lt;!&ndash; Apache Commons CLI - 命令行参数解析 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>commons-cli</groupId>-->
-<!--            <artifactId>commons-cli</artifactId>-->
-<!--            <version>1.4</version>-->
-<!--        </dependency>-->
-
-        <!-- Apache Commons Lang3 - 通用工具 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.8.1</version>
         </dependency>
-
-        <!-- Apache Commons IO - IO工具 -->
-<!--        <dependency>-->
-<!--            <groupId>commons-io</groupId>-->
-<!--            <artifactId>commons-io</artifactId>-->
-<!--            <version>2.6</version>-->
-<!--        </dependency>-->
-
-        <!-- H2 Database - 轻量级数据库 -->
-<!--        <dependency>-->
-<!--            <groupId>com.h2database</groupId>-->
-<!--            <artifactId>h2</artifactId>-->
-<!--            <version>1.4.200</version>-->
-<!--        </dependency>-->
-
-        <!-- QRCode生成 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -111,11 +63,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.5.13</version>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.12.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -149,7 +96,6 @@
             <version>1.8.1</version>
         </dependency>
 
-        <!-- Playwright for browser automation -->
         <dependency>
             <groupId>com.microsoft.playwright</groupId>
             <artifactId>playwright</artifactId>
@@ -189,7 +135,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.wiyi.ss.Client</mainClass>
+                    <mainClass>com.example.Client</mainClass>
                 </configuration>
             </plugin>
             
@@ -216,17 +162,9 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.wiyi.ss.Client</mainClass>
-                                </transformer>
-                                <!-- 包含所有资源文件到jar -->
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-                                    <resource>chrome-win/</resource>
-                                </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-                                    <resource>webkit-1944/</resource>
+                                    <mainClass>com.example.Client</mainClass>
                                 </transformer>
                             </transformers>
-                            <!-- 确保所有资源文件都包含在jar中 -->
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
