--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -17,37 +17,50 @@ permissions:
 
 jobs:
   build:
-    name: Build fat-jar
-    runs-on: ubuntu-latest
-    outputs:
-      date: ${{ steps.build_info.outputs.date }}
-      artifact: ${{ steps.name_step.outputs.artifact_name }}
+    name: Build (${​{ matrix.label }})
+    runs-on: ${​{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            arch: amd64
+            label: linux-amd64
+          - os: ubuntu-latest
+            arch: arm64
+            label: linux-arm64
+          - os: windows-latest
+            arch: amd64
+            label: windows-amd64
+          - os: macos-latest
+            arch: amd64
+            label: macos-amd64
+          - os: macos-14
+            arch: arm64
+            label: macos-arm64
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Generate date
-        id: build_info
+        id: build_date
         shell: bash
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - name: Set up GraalVM (Java 21)
+        uses: graalvm/setup-graalvm@v1
         with:
-          distribution: temurin
           java-version: '21'
+          distribution: graalvm
+          architecture: ${​{ matrix.arch }}
+          github-token: ${​{ secrets.GITHUB_TOKEN }}
 
       - name: Build with Maven
         run: mvn -B clean package --file pom.xml
 
-      - name: Set artifact name output
-        id: name_step
-        run: echo "artifact_name=biliTickerBuy-${{ steps.build_info.outputs.date }}" >> $GITHUB_OUTPUT
-
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
         with:
-          name: biliTickerBuy-${{ steps.build_info.outputs.date }}
+          name: biliTickerBuy-${​{ steps.build_date.outputs.date }}-${​{ matrix.label }}
           path: |
             target/*-jar-with-dependencies.jar
             target/*-all.jar
@@ -63,17 +76,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download build artifact
+      - name: Generate date
+        id: rel_date
+        shell: bash
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+
+      - name: Download all build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: ${{ needs.build.outputs.artifact }}
           path: release
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v-${{ needs.build.outputs.date }}
-          name: Release ${{ needs.build.outputs.date }}
+          tag_name: v-${​{ steps.rel_date.outputs.date }}
+          name: Release ${​{ steps.rel_date.outputs.date }}
           files: release/**/*.jar
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${​{ secrets.GITHUB_TOKEN }}
