--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -56,7 +56,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         native-image-job-reports: 'true'
 
-    # 3️⃣ Maven build → shaded jar
+    # 3️⃣ Maven buil
     - name: Build with Maven
       run: mvn -B clean package
 
@@ -65,9 +65,9 @@ jobs:
       shell: bash
       run: |
         mkdir -p target/native-image
-        FAT=$(find target -maxdepth 1 -name "*-shaded.jar" | head -n1)
+        FAT=$(find target -maxdepth 1 -name "*.jar" | head -n1)
         if [[ -z "$FAT" ]]; then
-          echo "::error::shaded jar not found"; exit 1
+          echo "jar not found"
         fi
         cp "$FAT" target/native-image/app.jar
         ls -lh target/native-image
@@ -153,14 +153,14 @@ jobs:
         path: dist/${{ matrix.label }}
         retention-days: 5
 
-    # 10️⃣ ubuntu-amd64 另行上传 shaded JAR
+    # 10️⃣ ubuntu-amd64 另行上传 JAR
     - name: Upload JAR Artifacts
       if: matrix.os == 'ubuntu-latest' && matrix.arch == 'amd64'
       uses: actions/upload-artifact@v4
       with:
         name: jar-files
         path: |
-          target/*-shaded.jar
+          target/*.jar
           "!target/original-*.jar"
         retention-days: 5
 
